--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
-    "name": "laravel/laravel",
+    "name": "database/laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+      "database/laravel", "framework"],
     "license": "MIT",
     "require": {
         "php": "^8.1",
